펀드리스트, 펀드등록, 펀드상세페이지, 펀딩하기(구매), 공지사항, 글상세페이지 메뉴 추가 및 화면연결(데이터연동x)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -577,6 +577,31 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".kosbank.FundList"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".kosbank.FundAdd"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".kosbank.FundDetail"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".kosbank.FundBuy"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".kosbank.Notice"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".kosbank.NoticeDetail"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity
             android:name=".activity.login.LoginSimpleDark"
             android:screenOrientation="portrait" />
         <activity
